ADD_EXECUTABLE (msftpd main.cpp version.c)

ADD_DEFINITIONS(-DDISABLE_FIREBIRD_INTERFACE -DDISABLE_MYSQL_INTERFACE)

TARGET_LINK_LIBRARIES (msftpd
  adicpp
  fbcpp
  ksys
  mycpp
  utf8
)

SET_SOURCE_FILES_PROPERTIES (version.c PROPERTIES GENERATED YES)
ADD_DEPENDENCIES (msftpd version msftpd_version)

ADD_CUSTOM_TARGET(msftpd_version
  COMMAND ${VERSION_EXECUTABLE} version.in version.c
  DEPENDS version.in
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)

SET (MSFTPD_EXECUTABLE
  "${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}${CMAKE_BUILD_TYPE}/msftpd${CMAKE_EXECUTABLE_SUFFIX}"
  CACHE INTERNAL ""
)

FIND_PROGRAM (UPX upx)

IF (PRIVATE_RELEASE AND CMAKE_BUILD_TYPE STREQUAL "Release" AND NOT CMAKE_GENERATOR MATCHES "Win64")
  IF (UPX)
    ADD_CUSTOM_COMMAND (
      TARGET msftpd POST_BUILD
      COMMAND ${UPX} ARGS --brute ${MSFTPD_EXECUTABLE}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      COMMENT ""
    )
  ENDIF (UPX)
ENDIF (PRIVATE_RELEASE AND CMAKE_BUILD_TYPE STREQUAL "Release" AND NOT CMAKE_GENERATOR MATCHES "Win64")

#ADD_CUSTOM_COMMAND (
#  TARGET msftpd PRE_BUILD
#  COMMAND ${VERSION_EXECUTABLE} ARGS version.in version.c
#  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
#  COMMENT "Generate version file"
#)

#IF (SITE STREQUAL "${MAIN_SITE}")
#  ADD_CUSTOM_COMMAND (
#    TARGET msftpd POST_BUILD
#    COMMAND ${VERSION_EXECUTABLE} ARGS version.in version.in
#    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
#    COMMENT "Increase version level"
#  )
#ENDIF (SITE STREQUAL "${MAIN_SITE}")

IF (WIN32 AND NOT UNIX)
  SET (INSTALL_BIN_DIR "")
  SET (INSTALL_ETC_DIR "")
ELSE (WIN32 AND NOT UNIX)
  SET (INSTALL_BIN_DIR "/bin")
  SET (INSTALL_ETC_DIR "/etc")
ENDIF (WIN32 AND NOT UNIX)

INSTALL (
  TARGETS msftpd RUNTIME
  DESTINATION "${INSTALL_BIN_DIR}"
)

INSTALL (FILES msftpd.conf DESTINATION "${INSTALL_ETC_DIR}" RENAME msftpd.conf.template)
