ADD_EXECUTABLE (msftpd main.cpp version.c)

ADD_DEFINITIONS(-DDISABLE_FIREBIRD_INTERFACE -DDISABLE_MYSQL_INTERFACE)

TARGET_LINK_LIBRARIES (msftpd
  adicpp
  fbcpp
  ksys
  mycpp
  utf8
  ${LIBPDBUTILS}
)

SET_SOURCE_FILES_PROPERTIES (version.c PROPERTIES GENERATED YES)

ADD_CUSTOM_COMMAND (
  OUTPUT version.c
  COMMAND ${VERSION_EXECUTABLE} version.in version.c
  DEPENDS version.in
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)
	
GET_TARGET_PROPERTY (MSFTPD_EXECUTABLE msftpd LOCATION)
	
FIND_PROGRAM (ICCPATCH iccpatch)
IF (ICCPATCH AND CMAKE_CXX_COMPILER MATCHES icl)
  ADD_CUSTOM_COMMAND (
    TARGET msftpd POST_BUILD
    COMMAND ${ICCPATCH} ARGS ${MSFTPD_EXECUTABLE}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT ""
  )
ENDIF (ICCPATCH AND CMAKE_CXX_COMPILER MATCHES icl)

FIND_PROGRAM (UPX upx)
FIND_PROGRAM (ASPR NAMES asprotect PATHS "C:/Arx/ASProtect")

IF (PRIVATE_RELEASE AND CMAKE_BUILD_TYPE STREQUAL Release AND NOT CMAKE_GENERATOR MATCHES Win64 AND CMAKE_SYSTEM_NAME MATCHES Windows)
  IF (ASPR)
    STRING (REPLACE "/" "\\" MSFTPD_EXECUTABLE_WINPATH ${MSFTPD_EXECUTABLE})
    STRING (REPLACE "\\\\" "\\" MSFTPD_EXECUTABLE_WINPATH ${MSFTPD_EXECUTABLE_WINPATH})
    CONFIGURE_FILE (
      "${CMAKE_CURRENT_BINARY_DIR}/msftpd.aspr.template"
      "${CMAKE_CURRENT_BINARY_DIR}/msftpd.aspr"
      !ONLY
    )
    ADD_CUSTOM_COMMAND (
      TARGET msftpd POST_BUILD
      COMMAND ${ASPR} ARGS -process "${CMAKE_CURRENT_BINARY_DIR}\\msftpd.aspr"
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      COMMENT ""
    )
  ELSE (ASPR)
    IF (UPX)
      ADD_CUSTOM_COMMAND (
        TARGET msftpd POST_BUILD
        COMMAND ${UPX} ARGS -q -k --best --lzma ${MSFTPD_EXECUTABLE}
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
        COMMENT ""
      )
    ENDIF (UPX)
  ENDIF (ASPR)
ENDIF (PRIVATE_RELEASE AND CMAKE_BUILD_TYPE STREQUAL Release AND NOT CMAKE_GENERATOR MATCHES Win64 AND CMAKE_SYSTEM_NAME MATCHES Windows)

INSTALL (
  TARGETS msftpd RUNTIME
  DESTINATION "${INSTALL_BIN_DIR}"
)

INSTALL (FILES msftpd.conf DESTINATION "${INSTALL_ETC_DIR}" RENAME msftpd.conf.template)
