ADD_EXECUTABLE (mskey
  main.cpp
  version.c
)

TARGET_LINK_LIBRARIES (mskey
  adicpp
  fbcpp
  ksys
  mycpp
  utf8
  ${LIBPDBUTILS}
)

SET_SOURCE_FILES_PROPERTIES (version.c PROPERTIES GENERATED YES)

ADD_CUSTOM_COMMAND (
  OUTPUT version.c
  COMMAND ${VERSION_EXECUTABLE} version.in version.c
  DEPENDS version.in
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)
	
GET_TARGET_PROPERTY (MSKEY_EXECUTABLE mskey LOCATION)
	
FIND_PROGRAM (ICCPATCH iccpatch)
IF (ICCPATCH AND CMAKE_CXX_COMPILER MATCHES icl)
  ADD_CUSTOM_COMMAND (
    TARGET mskey POST_BUILD
    COMMAND ${ICCPATCH} ARGS ${MSKEY_EXECUTABLE}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT ""
  )
ENDIF (ICCPATCH AND CMAKE_CXX_COMPILER MATCHES icl)

FIND_PROGRAM (UPX upx)

IF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES Win64 AND CMAKE_SYSTEM_NAME MATCHES Windows)
  IF (UPX)
    ADD_CUSTOM_COMMAND (
      TARGET mskey POST_BUILD
      COMMAND ${UPX} ARGS -q --brute ${MSKEY_EXECUTABLE}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      COMMENT ""
    )
  ENDIF (UPX)
ENDIF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES Win64 AND CMAKE_SYSTEM_NAME MATCHES Windows)
